--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-     "start": "react-scripts start"
+    "start": "react-scripts start"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
+    "react-scripts": "^5.0.1",
     "react-toast": "^1.0.3",
     "react-toastify": "^10.0.6",
     "recharts": "^2.12.7"
